--- a/src/components/widgets/ContactCard.astro
+++ b/src/components/widgets/ContactCard.astro
@@ -1,13 +1,7 @@
 ---
-import Content from "./Content.astro";
+import Content from './Content.astro';
 
-const {
-  name,
-  title,
-  image,
-  email,
-  bio
-} = Astro.props;
+const { name, title, image, email, bio } = Astro.props;
 ---
 
 <Content
@@ -18,21 +12,19 @@ const {
       callToAction: {
         variant: 'link',
         text: email,
-        href: `mailto:${email}`
-      }
-    }
+        href: `mailto:${email}`,
+      },
+    },
   ]}
   classes={{
-    container: 'shadow-md max-w-4xl mb-10'
+    container: 'shadow-md max-w-4xl mb-10',
   }}
 >
-
-<Fragment slot='content'>
-  <div class="dark:text-white">
-    <h1 class="text-4xl font-bold">{name}</h1>
-    <h1 class="text-accent text-lg">{title}</h1>
-    <span>{bio}</span>
-  </div>
-</Fragment>
-
+  <Fragment slot="content">
+    <div class="dark:text-white">
+      <h1 class="text-4xl font-bold">{name}</h1>
+      <h1 class="text-accent text-lg">{title}</h1>
+      <span>{bio}</span>
+    </div>
+  </Fragment>
 </Content>
