Update participation count

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -65,7 +65,7 @@ const metadata = {
   <Stats
     stats={[
       { title: 'Projects', amount: projects.length },
-      { title: 'Students Through Program', amount: '45' },
+      { title: 'Students Participated', amount: '50+' },
       { title: 'Semesters Running', amount: '4' },
     ]}
   />
